[package]
name = "iogrid-workload-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iogridd GPU workload runner — NVIDIA Container Toolkit on Linux/Windows, MLX/Metal on macOS."

[lib]
name = "iogrid_workload_gpu"
path = "src/lib.rs"

[features]
default = []
# Real GPU backends. On Linux/Windows this routes through bollard's
# `host_config.runtime = "nvidia"` (NVIDIA Container Toolkit); on macOS this
# would link the MLX Rust bindings when those compile cleanly on CI.
gpu-real = ["dep:bollard", "dep:futures-util"]
# Apple-Silicon MLX runner. Enables the real `MlxRunner` (Docker-backed,
# pulls a pre-built mlx-runtime image; macOS 14+ + aarch64 enforced at
# runtime). When off, the crate exposes `MlxStubGpuRunner` which refuses
# every workload with `BackendUnimplemented`. The flag pulls bollard +
# futures-util in for the Docker driver; this keeps default builds light
# while letting CI flip the real runner on for the
# `aarch64-apple-darwin` target.
gpu-mlx = ["dep:bollard", "dep:futures-util"]
# Live-host MLX integration test. Off by default — only flipped on a
# self-hosted Apple-Silicon runner that already has Docker Desktop +
# the mlx-runtime image present locally.
integration-mlx = ["gpu-mlx"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

iogrid-workload-docker = { workspace = true }

bollard = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }
