[package]
name = "iogrid-workload-ios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iogridd iOS-build workload — Tart subprocess driver (macOS only)."

[lib]
name = "iogrid_workload_ios"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
iogrid-platform-mac = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
